@@ -16,7 +16,7 @@
 // Usage: usher [-l address[:port]] [-a address:port] [-p pidfile] <server-file>
 //
 // options:
-// -m   the monotone command, defaults to "monotone"
+// -m   the monotone command, defaults to "mtn"
 // -l   address and port to listen on, defaults to 0.0.0.0:4691
 // -a   address and port to listen for admin commands
 // -p   a file (deleted on program exit) to record the pid of the usher in
@@ -27,7 +27,7 @@
 //   host localhost
 //   pattern net.venge.monotone
 //   remote 66.96.28.3:4691
-//   
+//
 //   server local
 //   host 127.0.0.1
 //   pattern *
@@ -51,8 +51,8 @@
 // A request to server "hostname" will be directed to the
 // server at <ip-address>:<port-number>, if that stem is marked as remote,
 // and to a local server managed by the usher, started with the given
-// arguments ("monotone serve --bind=something <server arguments>"),
-// if it is marked as local.
+// arguments ("mtn serve --bind=something <server arguments>"), if it is
+// marked as local.
 // Note that "hostname" has to be an initial substring of who the client asked
 // to connect to, but does not have to match exactly. This means that you don't
 // have to know in advance whether clients will be asking for
@@ -161,7 +161,7 @@ using std::make_pair;
 // defaults, overridden by command line
 int listenport = 4691;
 string listenaddr = "0.0.0.0";
-string monotone = "monotone";
+string monotone = "mtn";
 
 // keep local servers around for this many seconds after the last
 // client disconnects from them (only accurate to ~10 seconds)
