@@ -1,3 +1,8 @@
+2006-04-10  Richard Levitte  <richard@levitte.org>
+
+	* contrib/usher.cc: Changed all reference to "monotone" to the new
+	"mtn".  Submitted by Ethan Blanton <eblanton@cs.ohiou.edu>.
+
 2006-04-09  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* paths.cc (file_path::file_path): MM() on source path.
